objects/CSS_CountryStateValues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>To maintain BMS Country &amp; State values.</description>
    <fields>
        <fullName>CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <label>CountryName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <label>StateCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateName__c</fullName>
        <label>StateName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CSS_CountryStateValues</label>
</CustomObject>